--- a/05-C和C++/02-C++/01-最简单的C++入门.md
+++ b/05-C和C++/02-C++/01-最简单的C++入门.md
@@ -120,3 +120,153 @@ std::cout << c << std::endl;  // A
 为啥`wchar_t`和`char32_t` 这个输出是数字呢？ 那是因为它们的类型底层的逻辑就是数值类型
 
 
+# 8. 拼接字符串常量
+
+```cpp
+char *str1 = "h"
+			 "s"
+			 "sssdfsdsdfsdf";
+```
+
+# 9. C++中字符串
+
+- C-风格的字符串
+
+```cpp
+char str[20] = "xxxxxxx";
+char str[20] = {'x','s','a','\0'}  // 最后必须要有\0
+char *str = "xxxxxx";
+```
+
+- string类的使用
+
+```cpp
+#include <string>
+string str;  // 一个空的字符串
+string str = "zmglove";
+```
+
+同时，C++11过后支持 列表初始化方式来初始化字符串
+
+```cpp
+// 以下4种都是正确的，别惊讶
+char str[] = {"hello"};
+char str[]{"hello"};
+string str = {"hello"};
+string str{"hello"};
+```
+
+
+
+# 10. cin的一系列问题
+
+## 10.1  字符串输入
+
+```cpp
+#include <iostream>
+using namespace std;
+
+/**
+ * 来自 C++ primer plus Page 77
+ */
+int main(void)
+{
+    const int SIZE = 20;
+    char name[SIZE];
+    char dessert[SIZE];
+
+    cout << "Enter your name:\n";
+    cin >> name;
+    cout << "Enter your favourite dessert: \n";
+    cin >> dessert;
+    cout << "I have some delicious " << dessert;
+    cout << " for you," << name << ".\n";
+    return 0;
+}
+```
+
+以上的代码在输入`name`的时候，如果是`zmg love`  这种有空格的的话，最终等不到`Enter your favourite dessert`的输入信息，就运行完毕了
+![[Pasted image 20251022135827.png\|600]]
+那么`cin`是如何确定已完成字符串的输入的呢？
+
+- 首先，cin无法处理包含空格的输入。 这个是cin的核心缺陷。 C++中`>>` 默认会将空格（以及Tab、换行符等）视为分隔符。
+- 导致输入`zmg love` 最终cin只会读取第一个`zmg`。 `love`会留在输入缓冲区，等到`Enter your favouriate dessert`的时候，我们来不及输入，会将缓冲区中的`love`赋值给`dessert`。
+- 同时`cin`还有一个问题就是，字符串的size只有20，如果我们输入超过20个字符的话，程序就会报错崩溃，不够安全
+
+## 10.2 面向行的输入  getline()
+
+将上面的代码稍加改一下，就能够满足输入带有空格的字符串了
+
+```cpp hl:11
+#include <iostream>
+using namespace std;
+
+int main(void)
+{
+    const int SIZE = 20;
+    char name[SIZE];
+    char dessert[SIZE];
+
+    cout << "Enter your name:\n";
+    cin.getline(name, SIZE);
+    cout << "Enter your favorite dessert:\n";
+    cin.getline(dessert, SIZE);
+    cout << "I have some delicious " << dessert;
+    cout << " for you, " << name << ".\n";
+    return 0;
+}
+```
+
+
+## 10.3 面向行的输入 get()
+
+`iostream`里面有另外一个`get()`函数，该函数有几个变体：
+- cin.get(name, SIZE);   这个有问题， 第一个输入没有问题，它会读取整行的数据，但是遇到换行符，不会舍弃，会将换行符一直留在缓冲区，那么第二个`cin.get(dessert, SIZE);` 这个就有问题了，会直接读取一个换行符，它认为到行尾了，所以dessert会是一个空字符串。
+- <span class="r">好在get()还有另外一个变体</span>
+- 不带任何参数的`cin.get()`调用，可以读取下一个字符（即使是换行符），相当于在缓冲区中将换行符先读出去
+
+```cpp hl:2
+cout << "Enter your name:\n";
+cin.get(name, SIZE).get();
+cout << "Enter your favorite dessert:\n";
+cin.get(dessert, SIZE).get();
+cout << "I have some delicious " << dessert;
+cout << " for you, " << name << ".\n";
+return 0;
+```
+
+## 10.4 混合输入字符串和数字
+
+```cpp
+#include <iostream>
+using namespace std;
+
+int main(void)
+{
+    cout << "What year was your house built?" << endl;
+    int year;
+    cin >> year;
+    cout << "What is its street address?" << endl;
+    char address[80];
+    cin.getline(address, 80);
+    cout << "Year built : " << year << endl;
+    cout << "Address : " << address << endl;
+    cout << "DONE!!" << endl;
+
+    return 0;
+}
+```
+
+你会发现输入 year 的值，比如1996后，程序直接顺利运行结束了，没有机会输入address。同样的是因为会有一个换行符在缓冲区中，等到`cin.getline()`的时候，直接读取了缓冲区的数据了，导致address是空字符串
+那么如何解决呢？ 和上面的`10.3`一样，将缓冲的数据先输出。
+
+```cpp
+cin >> year;
+cin.get();  // 先将换行符读取了
+
+// 或者用这个方式
+(cin >> year).get();
+```
+
+
+
