--- a/05-C和C++/02-C++/03-指针.md
+++ b/05-C和C++/02-C++/03-指针.md
@@ -46,7 +46,22 @@ int *p;
 ```
 
 这个代码是非常危险的，虽然我们可能侥幸能够正常运行，但是危害很大
+- 指针p尚未初始化，它指向一个不确定的、随机的内存地址
 - `*p` 没有指向明确的地址，虽然可能`*p= 10`能够成功，但是有很大概率是不成功的，它随机指向的那个地址可能是只读的，怎么办呢？就会出现崩溃异常的。
 - <span class="r" style="font-size:20px;background-color:yellow">在指针使用的时候，一定要给指针初始化一个确定的、适当的地址</span>
 
-# 2. 
+# 2. new和delete
+
+在C语言中，分配内存采用的是`malloc`这些函数，在C++中提供了一个更加安全的方式`new`
+
+```cpp
+int *p = new int;
+int *arr = new int[4];
+
+delete p;
+delete[] arr;
+```
+
+> [!danger]
+> 只有通过`new`方式分配的内存，才可以用`delete`。 如果`new`分配的内存是用`new []`的方式，回收内存的时候，也需要用`delete []`。如果用`delete`的话，只会回收第一个元素的空间，从而导致其他空间没有被回收，会导致内存泄露
+
